log
Thu 21 Mar 2024 11:24:31 PM UTC: 
 tests:  0|5
total_score: 10/70
0d509a3
Thu 21 Mar 2024 11:25:51 PM UTC: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  1|4
total_score: 10/70
496dfc9
Thu 21 Mar 2024 11:27:05 PM UTC: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:65:12: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   65 |       suma += numero;
      |            ^~
cc1: all warnings being treated as errors
Compilation failed
0e11dd3
Thu 21 Mar 2024 11:28:12 PM UTC: 
 exercises.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  2|3
total_score: 20/70
9f21d3c
Thu 21 Mar 2024 11:29:47 PM UTC: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  2|3
total_score: 20/70
e655586
Thu 21 Mar 2024 11:30:22 PM UTC: 
 exercises.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  3|2
total_score: 40/70
a75de4b
Thu 21 Mar 2024 11:34:30 PM UTC: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:115:19: error: ‘estak’ is a pointer; did you mean to use ‘->’?
  115 |         push(estak. cadena[i]); //inserta elemento E en pila P
      |                   ^
      |                   ->
exercises.c:115:9: error: too few arguments to function ‘push’
  115 |         push(estak. cadena[i]); //inserta elemento E en pila P
      |         ^~~~
In file included from exercises.c:7,
                 from test.c:5:
stack.h:11:6: note: declared here
   11 | void push(Stack *stack, void *data) { pushFront(stack, data); }
      |      ^~~~
In file included from test.c:5:
exercises.c:111:10: error: variable ‘estak’ set but not used [-Werror=unused-but-set-variable]
  111 |   Stack* estak = create_stack();
      |          ^~~~~
cc1: all warnings being treated as errors
Compilation failed
62aec0f
Thu 21 Mar 2024 11:35:04 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:115:21: error: invalid type argument of unary ‘*’ (have ‘int’)
  115 |         push(estak, *cadena[i]); //inserta elemento E en pila P
      |                     ^~~~~~~~~~
Compilation failed
c2d03db
